# wasivst

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  meson.build  meson_options.txt  package.json
.github/workflows/: build.yml
docs/: architecture.md
src/demo/: coi-serviceworker.js  index.html
src/guest/: Dockerfile  init  qemu-build.sh
src/host/: main.cpp
src/host/ipc/: serial-channel.cpp  serial-channel.h
src/host/vst2/: vst2-host.cpp  vst2-host.h
src/host/vst3/: vst3-host.cpp  vst3-host.h
src/worklet/: libv86-loader.js  smoke-test.mjs  vst-integration-test.mjs  wasivst-worklet.js  wasivst.js
tools/wasivstctl/: main.cpp  meson.build
